--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     
     <h1> Hello from my Git file </h1>
     <div> This div from branch v2 </div>
+    <p>This is for github</p>
 </body>
 </html>
